objects/ASI_KOR_NSD_Proposal_Header__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_CA_Amount_Pending__c</fullName>
        <label>CA Amount (Pending)</label>
        <summarizedField>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_CA_Amount_Pending__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_NSD_Proposal_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_KOR_NSD_Proposal_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_National_Sales_Director_Comments__c</fullName>
        <label>Final Comments (NSD)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_National_Total_CA_Budget__c</fullName>
        <label>National Total CA Budget</label>
        <summarizedField>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_CA_Budget__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_NSD_Proposal_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_National_Total_Status__c</fullName>
        <formula>IF( ASI_KOR_Total_Incentive_Amount_Proposal__c &lt;= 0, &quot;&quot;,
IF( ASI_KOR_Total_CA_Amount_excl_Basic__c &gt;  ASI_KOR_National_Total_CA_Budget__c ,  &quot;Exceed Budget&quot; ,  &quot;Within Budget&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Total Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Required_Regions__c</fullName>
        <label>No. of Required Regions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Sumitted_Regions__c</fullName>
        <label>No. of Sumitted Regions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Cut_off_Date__c</fullName>
        <label>Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_TMKT_Email__c</fullName>
        <label>SYS TMKT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_excl_Basic__c</fullName>
        <label>Total CA (excl. Basic)</label>
        <summarizedField>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_Total_CA_Amount_excl_Basic__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_NSD_Proposal_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Proposal__c</fullName>
        <label>Total VI</label>
        <summarizedField>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_Total_Incentive_Amount_Proposal__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Proposal_By_Brand__c.ASI_KOR_NSD_Proposal_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_Pending__c</fullName>
        <label>Total VI (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Planning (NSD)</label>
    <listViews>
        <fullName>ASI_KOR_Waiting_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_No_of_Required_Regions__c</columns>
        <columns>ASI_KOR_No_of_Sumitted_Regions__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <columns>ASI_KOR_National_Total_CA_Budget__c</columns>
        <columns>ASI_KOR_National_Total_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Waiting for Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_No_of_Required_Regions__c</columns>
        <columns>ASI_KOR_No_of_Sumitted_Regions__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Total_Incentive_Amount_Proposal__c</columns>
        <columns>ASI_KOR_National_Total_CA_Budget__c</columns>
        <columns>ASI_KOR_National_Total_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NP-{00000000}</displayFormat>
        <label>NSD Sales Planning</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plannings (NSD)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>